Cleaning code and fixing the splash image z-index

--- a/www/css/estilos.css
+++ b/www/css/estilos.css
@@ -27,25 +27,25 @@ body
 }
 .top
 {
-    width: 70%;
+	width: 70%;
 	height: 300px;
 	margin-left: 15%;
 	margin-top: 5%;
-	border-width: 1px 1px 1px;
-    border-style: solid;
-    border-color: rgb(216, 216, 216);
-    -moz-border-top-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    border-image: none;
-    border-radius: 3px 3px 3px 3px;
-    background-color: rgb(255, 255, 255);
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgb(216, 216, 216);
+	-moz-border-top-colors: none;
+	-moz-border-right-colors: none;
+	-moz-border-bottom-colors: none;
+	-moz-border-left-colors: none;
+	border-image: none;
+	border-radius: 3px;
+	background-color: rgb(255, 255, 255);
 	
 }
 .bot
 {
-    width: 50%;
+	width: 50%;
 	height: 25%;
 	margin-left: 25%;
 	margin-top: 30px;
@@ -56,8 +56,8 @@ body
 {
 	width: 30%;
 	height: 70%;
-    border-radius: 3px 3px 3px 3px;
-    background-color: rgb(0, 133,184);
+	border-radius: 3px;
+	background-color: rgb(0, 133,184);
 
 }
 .box1
@@ -99,7 +99,7 @@ body
 {
 	width: 7%;
 	height: 100%;
-	border-radius: 50% 50% 50% 50%;
+	border-radius: 50%;
 	float: left;
 }
 
@@ -113,7 +113,10 @@ body
 	color: #FFF;
 	float: left;
 }
-.avatar{ border-radius: 50% 50% 50% 50%;}
+.avatar
+{
+	border-radius: 50%;
+}
 .conf
 {
 	width: 4%;
@@ -123,7 +126,7 @@ body
 }
 .bot2
 {
-    width: 70%;
+	width: 70%;
 	height: 10%;
 	margin-left: 15%;
 	margin-bottom: 30px;
@@ -132,7 +135,7 @@ body
 {
 	width: 7%;
 	height: 100%;
-	border-radius: 50% 50% 50% 50%;
+	border-radius: 50%;
 	float: left;
 }
 
@@ -148,14 +151,14 @@ body
 }
 .bot3
 {
-    width: 70%;
+	width: 70%;
 	height: 10%;
 	margin-left: 25.5%;
 	margin-bottom: 30px;
 }
 .bot4
 {
-    width: 70%;
+	width: 70%;
 	height: 10%;
 	margin-left: 36%;
 	margin-bottom: 50px;
@@ -164,18 +167,18 @@ body
 {
 	width: 100%;
 	height: 130px;
-	z-index: 50;
+	z-index: 10;
 }
 .main
 {
 	width: 100%;
 	height: 100%;
 	background-color: rgb(229, 229, 229);
-	z-index: 50;
+	z-index: 20;
 }
 .caja
 {
-    width: 70%;
+	width: 70%;
 	margin-left: 15%;
 }
 .box-p
@@ -184,16 +187,16 @@ body
 	height: 150px;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	border-width: 1px 1px 1px;
-    border-style: solid;
-    border-color: rgb(216, 216, 216);
-    -moz-border-top-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    border-image: none;
-    border-radius: 3px 3px 3px 3px;
-    background-color: rgb(255, 255, 255);
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgb(216, 216, 216);
+	-moz-border-top-colors: none;
+	-moz-border-right-colors: none;
+	-moz-border-bottom-colors: none;
+	-moz-border-left-colors: none;
+	border-image: none;
+	border-radius: 3px;
+	background-color: rgb(255, 255, 255);
 }
 
 .logo2
@@ -212,23 +215,28 @@ body
 	margin-left: 8%;
 	padding-top: 5%;
 }
+#apDiv1 {
+	position: absolute;
+	width: 422px;
+	height: 453px;
+	z-index: -1;
+	left: 837px;
+	top: 515px;
+	visibility: auto;
+}
 .cr
 {
-    padding-left: 55px;
+	padding-left: 55px;
 	color: #fff;
 }
 h2
 {
-    color: #fff;
+	color: #fff;
 	padding-bottom:1%;
 }
 li
 {
-    color: #fff;
+	color: #fff;
 	padding-top:1%;
 	font-size: 20;
-}
-.fond
-{
-	float: right;
 }
